Menu visible. Tabs for documents implemented on UI. No logic behind them yet. Need to figure out how to get windows to be a fixes size with scrolling. Currently they have a scrollbar, but resize to meet requirements.

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -38,3 +38,7 @@
     transform: rotate(360deg);
   }
 }
+
+.challenge {
+  width: 100%
+}
